--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>TK50P’s website</h1>
-        <nav>
-            <ul>
-                <li><a href="#">About me</a></li>
-                <li><a href="#">Contact Me</a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <h1>TK50P’s Website</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
+        </ul>
+    </nav>
+</header>
     <main>
         <section id="about-me">
             <h2>About Me</h2>
