--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 <body>
 <header>
     <h1>TK50P’s Website</h1>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="contact.html">Contact Me</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul>
+                <li><a href="#about-me">About me</a></li>
+                <li><a href="#contact-me">Contact Me</a></li>
+            </ul>
+        </nav>
 </header>
     <main>
         <section id="about-me">
