--- a/index.html
+++ b/index.html
@@ -7,23 +7,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header>
-    <h1>TK50P’s Website</h1>
+    <header>
+        <h1>TK50P’s Website</h1>
         <nav>
             <ul>
-                <li><a href="#about-me">About me</a></li>
-                <li><a href="#contact-me">Contact Me</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="contact.html">Contact Me</a></li>
             </ul>
         </nav>
-</header>
+    </header>
     <main>
-        <section id="about-me">
-            <h2>About Me</h2>
-            <p>TBD: Add information about yourself here.</p>
-        </section>
-        <section id="contact-me">
-            <h2>Contact Me</h2>
-            <p>TBD: Add your contact information here.</p>
+        <section id="home">
+            <h2>Welcome to My Website</h2>
+            <p>This is the home page content.</p>
         </section>
     </main>
     <script src="script.js"></script>
