Add PC Specs images

--- a/about.html
+++ b/about.html
@@ -21,7 +21,19 @@
         <section id="about-me">
             <h2>About Me</h2>
             <p>I am a 14 years old guy and I like doing BSODs in every video.</p>
-            <p>Here you can add more information about yourself, your hobbies, interests, or any other details you want to share.</p>
+		<section id="pc-specs">
+            <img src="images/pc-image.jpg" alt="My PC" class="pc-image">
+            <div class="pc-specs">
+                <h3>My PC Specs:</h3>
+                <ul>
+                    <li>Intel Core i5-10600KF (overclockable, non-iGPU)</li>
+                    <li>Motherboard: ASUS ROG STRIX Z490-G (Wi-Fi Model)</li>
+                    <li>RAM: Samsung DDR4-2666 32GB (16GBx2)</li>
+                    <li>SSD: 1TB SSD (NVMe, SATA), 500GB SSD</li>
+                    <li>HDD: None</li>
+                    <li>GPU: NVIDIA GTX 1660 Super (VRAM 6GB)</li>
+                    <li>OS: Changes every week (Windows 7 Enterprise, Windows 11 IoT Enterprise LTSC 2024)</li>
+                </ul>
         </section>
     </main>
     <script src="script.js"></script>
