--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>TK50P's Website</h1>
+        <h1>TK50P’s Website</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,7 +20,11 @@
     <main>
         <section id="contact-me">
             <h2>Contact Me</h2>
-            <p>You can reach me at [your email address] or follow me on [your social media].</p>
+            <p>You can reach me at <a href="mailto:jasonjongho@gmail.com">My Email</a> or follow me on <a href="https://discord.gg/8kkx256gGy">Discord</a>.</p>
+        </section>
+        <section id="contact-warning">
+            <p class="contact-message">You can contact me with my email and Discord server.</p>
+            <p class="contact-warning">DO NOT USE EMAIL FOR ABUSE AND SPAM.</p>
         </section>
     </main>
     <script src="script.js"></script>
