Add footer to all pages

--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
+				<li><a href="modiso.html">Windows Mod ISO</a></li>
             </ul>
         </nav>
     </header>
@@ -36,6 +37,10 @@
                 </ul>
         </section>
     </main>
+	    <footer>
+        <p>&copy; 2024 TK50P. All rights reserved.</p>
+        <p>This page is made with my skills and didn’t use ANY Website Builders.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
