--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <header>
-        <h1>TK50P’s Website</h1>
+        <h1>TK50P's Website</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
+				<li><a href="modiso.html">Windows Mod ISO</a></li>
             </ul>
         </nav>
     </header>
@@ -31,6 +32,10 @@
             </div>
         </section>
     </main>
+	<footer>
+		<p>&copy; 2024 TK50P. All rights reserved.</p>
+        <p>This page is made with my skills and didnâ€™t use ANY Website Builders.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
